--- a/index.html
+++ b/index.html
@@ -199,6 +199,22 @@
     		pointer-events: none;
         }
 	
+	/* --- Contact Card Styling --- */
+	.contact-card {
+        	background-color: #eef5ff; /* A light, attention-grabbing blue */
+        	border-left: 5px solid var(--primary-color);
+        	padding: 1rem 1.5rem;
+       		margin-bottom: 2.5rem;
+        	border-radius: 5px;
+    	}
+    	.contact-card h3 {
+        	margin-bottom: 0.5rem;
+        	color: var(--primary-color);
+    	}
+    	.contact-card a {
+        	color: var(--primary-color);
+        	font-weight: bold;
+    	}
         /* --- Responsive Adjustments --- */
         @media (max-width: 768px) {
             .page-header {
@@ -244,13 +260,17 @@
 
     <main class="container">
         <p style="text-align: center; margin-bottom: 2.5rem; font-size: 1.1rem;">
-            Welcome! Below are the study workshops available for the Fall semester. Select your workshop below by clicking "Register" on your chosen session to open the registration form.
+            Welcome! Below are the study workshops available for the Fall semester. Register for your workshop below by clicking "Register" on your chosen session to open the registration form, signing-in with your Gwinnett Tech student email, and completing the form.
         </p>
+	<div class="contact-card">
+    		<h3>Have Questions?</h3>
+    		<p>If you have any questions about the workshops, please contact the CIS Workshops staff at <a href="mailto:cisworkshops@student.gwinnetttech.edu">cisworkshops@student.gwinnetttech.edu</a></p>
+</div>
         <!-- Network+ Workshop Card -->
         <div class="workshop-card">
-            <h2>CompTIA Network+ Study Workshop</h2>
+            <h2>CompTIA Network+ Study Workshops</h2>
             <p>
-                Join our guided study group to prepare for the CompTIA Network+ (N10-00) certification exam. Select a session below to register.
+                Join our guided study group to prepare for the CompTIA Network+ (N10-009) certification exam. Select a session below to register.
             </p>
             
             <ul class="session-list">
@@ -329,7 +349,7 @@
 
         <!-- Security+ Workshop Card -->
         <div class="workshop-card">
-            <h2>CompTIA Security+ Study Workshop</h2>
+            <h2>CompTIA Security+ Study Workshops</h2>
             <p>
                 This workshop prepares you for the CompTIA Security+ (SY0-701) certification. Learn the essential principles by registering for a session.
             </p>
@@ -341,8 +361,8 @@
                         <p class="session-info">Date: August 26th, 2025 | Time: 2:00 PM - 4:00 PM | Location: Room B206</p>
                     </div>
                     <div class="button-group">
-                        <a href="https://forms.office.com/r/CtC74rHMGU" target="_blank" rel="noopener noreferrer" class="signup-btn">Register</a>
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="calendar-btn">Add to Calendar 📅</a>
+                        <a href="https://forms.office.com/r/UMjeLcb1rQ" target="_blank" rel="noopener noreferrer" class="signup-btn">Register</a>
+                        <a href="https://stripo.email/storage/ics/2025/8/ics_cis-security-workshop-domain-1-general-security-concepts-2025-08-12-141625.ics" target="_blank" rel="noopener noreferrer" class="calendar-btn">Add to Calendar 📅</a>
                     </div>
                 </li>
                 <li>
@@ -351,8 +371,8 @@
                         <p class="session-info">Date: September 2nd, 2025 | Time: 2:00 PM - 4:00 PM | Location: Room B206</p>
                     </div>
                     <div class="button-group">
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="signup-btn">Register</a>
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="calendar-btn">Add to Calendar 📅</a>
+                        <a href="https://forms.office.com/r/PqFfChzeBP" target="_blank" rel="noopener noreferrer" class="signup-btn">Register</a>
+                        <a href="https://stripo.email/storage/ics/2025/8/ics_cis-security-workshop-domain-2-threats-vulnerabilities-and-mitigations-2025-08-12-141727.ics" target="_blank" rel="noopener noreferrer" class="calendar-btn">Add to Calendar 📅</a>
                     </div>
                 </li>
                 <li>
@@ -361,8 +381,8 @@
                         <p class="session-info">Date: September 9th, 2025 | Time: 2:00 PM - 4:00 PM | Location: Room B206</p>
                     </div>
                     <div class="button-group">
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="signup-btn">Register</a>
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="calendar-btn">Add to Calendar 📅</a>
+                        <a href="https://forms.office.com/r/Hrt2zg2s36" target="_blank" rel="noopener noreferrer" class="signup-btn">Register</a>
+                        <a href="https://stripo.email/storage/ics/2025/8/ics_cis-security-workshop-domain-3-security-architecture-2025-08-12-141821.ics" target="_blank" rel="noopener noreferrer" class="calendar-btn">Add to Calendar 📅</a>
                     </div>
                 </li>
                 <li>
@@ -371,8 +391,8 @@
                         <p class="session-info">Date: September 16th, 2025 | Time: 2:00 PM - 4:00 PM | Location: Room B206</p>
                     </div>
                     <div class="button-group">
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="signup-btn">Register</a>
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="calendar-btn">Add to Calendar 📅</a>
+                        <a href="https://forms.office.com/r/9eFK2WcHBH" target="_blank" rel="noopener noreferrer" class="signup-btn">Register</a>
+                        <a href="https://stripo.email/storage/ics/2025/8/ics_cis-security-workshop-domain-4-security-operations-2025-08-12-141905.ics" target="_blank" rel="noopener noreferrer" class="calendar-btn">Add to Calendar 📅</a>
                     </div>
                 </li>
                 <li>
@@ -381,8 +401,8 @@
                         <p class="session-info">Date: September 23rd, 2025 | Time: 2:00 PM - 4:00 PM | Location: Room B206</p>
                     </div>
                     <div class="button-group">
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="signup-btn">Register</a>
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="calendar-btn">Add to Calendar 📅</a>
+                        <a href="https://forms.office.com/r/ESMc3SAT2v" target="_blank" rel="noopener noreferrer" class="signup-btn">Register</a>
+                        <a href="https://stripo.email/storage/ics/2025/8/ics_cis-security-workshop-domain-5-security-program-management-and-oversight-2025-08-12-141946.ics" target="_blank" rel="noopener noreferrer" class="calendar-btn">Add to Calendar 📅</a>
                     </div>
                 </li>
                  <li>
@@ -391,8 +411,8 @@
                         <p class="session-info">Date: September 30th, 2025 | Time: 2:00 PM - 4:00 PM | Location: Room B206</p>
                     </div>
                     <div class="button-group">
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="signup-btn">Register</a>
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="calendar-btn">Add to Calendar 📅</a>
+                        <a href="https://forms.office.com/r/YDP358VkLf" target="_blank" rel="noopener noreferrer" class="signup-btn">Register</a>
+                        <a href="https://stripo.email/storage/ics/2025/8/ics_cis-security-workshop-all-domain-review-day-2025-08-12-142014.ics" target="_blank" rel="noopener noreferrer" class="calendar-btn">Add to Calendar 📅</a>
                     </div>
                 </li>
                 <li>
@@ -401,13 +421,13 @@
                         <p class="session-info">Date: October 7th, 2025 | Time: 2:00 PM - 4:00 PM | Location: Room B206</p>
                     </div>
                     <div class="button-group">
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="signup-btn">Register</a>
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="calendar-btn">Add to Calendar 📅</a>
+                        <a href="https://forms.office.com/r/pmYcpJ84hu" target="_blank" rel="noopener noreferrer" class="signup-btn">Register</a>
+                        <a href="https://stripo.email/storage/ics/2025/8/ics_cis-security-workshop-simulated-exam-day-2025-08-12-142044.ics" target="_blank" rel="noopener noreferrer" class="calendar-btn">Add to Calendar 📅</a>
                     </div>
                 </li>
             </ul>
         </div>
-
+	
     </main>
 
     <footer class="page-footer">
