--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <p>
                 Join our guided study group to prepare for the CompTIA Network+ (N10-009) certification exam. Select a session below to register.
             </p>
-            
+            <ul class="session-list">
                 <li>
                     <div class="session-details">
                         <span class="session-title">Domain 5: Network Troubleshooting</span>
@@ -312,6 +312,7 @@
             <p>
                 This workshop prepares you for the CompTIA Security+ (SY0-701) certification. Learn the essential principles by registering for a session.
             </p>
+			<ul class="session-list">
                 <li>
                     <div class="session-details">
                         <span class="session-title">Domain 5: Security Program Management & Oversight</span>
